--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,97 @@ Green: #00B172
 White: #FFF
 
 */
+
+header>div {
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav {
+    width: 1480px;
+    position: fixed;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    float: right;
+    
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    padding: 20px;
+}
+
+.spotify-logo {
+    width: 200px;
+    margin-right: 1rem;
+}
+
+.music-everyone{
+    color: white;
+    height: 600px;
+    width: 1500px;
+    background-image: url("../images/landing.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    line-height: 10px;
+}
+
+h1{
+    font-size: 70px;
+}
+
+.music-everyone p{
+    float: center;
+    font-size: 27px;
+    width: 40%;
+    padding-left: 440px;
+    padding-right: 440px;
+}
+
+.background-text{
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+
+.what-spotify {
+    width: 95%;
+}
+
+.what-spotify>div {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.what-spotify>div>article {
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    width: 280px;
+}
+
+.what-spotify h3 {
+    color: #00B172;
+}
+
+.what-spotify img {
+    width: 45px;
+    padding-left: 20px;
+}
+
+
+
+
+
+
