--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,12 @@ Green: #00B172
 White: #FFF
 
 */
+@import url("https://fonts.googleapis.com/css2?family=Istok+Web&display=swap");
+
+body{
+    font-family: 'Istok';
+    color: #1A1A1A;
+}
 
 header>div {
     padding: 0 25px;
@@ -25,7 +31,6 @@ nav ul {
     justify-content: space-evenly;
     align-items: center;
     float: right;
-    
 }
 
 nav a {
@@ -37,6 +42,17 @@ nav a {
 .spotify-logo {
     width: 200px;
     margin-right: 1rem;
+}
+
+.bounce-animation{
+    height: 80px;
+}
+
+.bounce-animation:hover{
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 .music-everyone{
@@ -68,35 +84,110 @@ h1{
     padding-bottom: 200px;
 }
 
-
 .what-spotify {
     width: 95%;
+    height: 300px;
 }
 
 .what-spotify>div {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    align-items: center;
 }
 
 .what-spotify>div>article {
+    align-items: center;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex-direction: column;
     width: 280px;
 }
 
 .what-spotify h3 {
-    color: #00B172;
+    color: #00B172; 
+}
+
+.what-spotify h2{
+    padding-left: 620px;
+}
+
+.underline{
+    text-decoration: none;
+    border-bottom: 5px solid #00B172 ;
 }
 
 .what-spotify img {
-    width: 45px;
-    padding-left: 20px;
+    width: 75px;
+}
+
+.kanye{
+    color: white;
+    background-color: #00B172;
+    padding-bottom: 30px;
+}
+
+.kanye h2 {
+    font-size: 30px;
+    margin-left: 200px;
+    padding-top: 30px;
+}
+
+.kanye h4 {
+    font-size: 20px;
+}
+
+.underline-white{
+    text-decoration: none;
+    border-bottom: 3px solid white ;
+}
+
+.kanye>div {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: left;
+}
+
+.main>div {
+    align-items: left;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.text{
+    width: 300px;
+    margin-left: 200px;
+}
+
+.logo-normal {
+    height: 200px;
+}
+
+.spotify-page{
+    height: 550px;
+    margin-right: 200px;
 }
 
 
 
 
 
+
+
+
+
+
+@keyframes bounce {
+    0%, 100%, 50%, 80%{
+        transform: translateY(0)
+    }
+    40% {
+        transform: translateY(-30px)
+    }
+    60%{
+        transform: translateY(-15px)
+    }
+}
 
